[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paratro-sdk"
version = "1.6.0"
description = "Official Python SDK for Paratro MPC Wallet Infrastructure"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Paratro", email = "hello@paratro.com"}]
keywords = ["paratro", "mpc", "wallet", "x402", "crypto", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://paratro.com"
Documentation = "https://docs.paratro.com"
Repository = "https://github.com/paratro/paratro-sdk-python"

[tool.setuptools.packages.find]
include = ["paratro*"]
